--- a/apitestsys/apitest/templates/base.html
+++ b/apitestsys/apitest/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <meta name="keyword" content="">
     <link rel="shortcut icon" href="../static/img/favicon.png">
-    <title>Home</title>
+    <title>API Test System</title>
     <!-- Icons -->
     <link href="../static/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/css/simple-line-icons.css" rel="stylesheet">
