--- a/apitestsys/apitest/templates/project_list.html
+++ b/apitestsys/apitest/templates/project_list.html
@@ -35,7 +35,7 @@
                                 <span class="badge badge-success" style="margin-right: auto">Active</span>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-success">
+                                <button type="button" class="btn btn-success" onclick="window.location='/addInterface/'">
                                     编辑
                                 </button>
                                 <button type="button" class="btn btn-danger">
