--- a/apitestsys/apitest/templates/report_list.html
+++ b/apitestsys/apitest/templates/report_list.html
@@ -35,7 +35,7 @@
                                 <span class="badge badge-success" style="margin-right: auto">Active</span>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-warning" onclick="window.location='/interfaceList/'">
+                                <button type="button" class="btn btn-warning" onclick="window.location='/reportDetail/'">
                                     查看详情
                                 </button>
                             </td>
