--- a/apitestsys/apitest/templates/add_interface.html
+++ b/apitestsys/apitest/templates/add_interface.html
@@ -3,7 +3,7 @@
     <main class="main">
        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">首页</a></li>
-            <li class="breadcrumb-item"><a href="#">项目列表</a></li>
+            <li class="breadcrumb-item"><a href="/projectList/">项目列表</a></li>
             <li class="breadcrumb-item active">新增接口</li>
         </ol>
        <div class="col-md-12 mb-12">
