--- a/apitestsys/apitest/templates/report_detail.html
+++ b/apitestsys/apitest/templates/report_detail.html
@@ -13,7 +13,7 @@
     <div class="">
     <div class="row">
         <ol class="breadcrumb">
-            <li><a href="/result/">报告列表</a></li>
+            <li><a href="/reportList/">报告列表</a></li>
             <li class="active">测试报告</li>
           </ol>
         <div class="page-header">
