--- a/apitestsys/apitest/templates/testcase_list.html
+++ b/apitestsys/apitest/templates/testcase_list.html
@@ -39,7 +39,7 @@
                                 <span class="badge badge-success" style="margin-right: auto">Active</span>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-success">
+                                <button type="button" class="btn btn-success" onclick="window.location='/addTestcase/'">
                                     编辑
                                 </button>
                                 <button type="button" class="btn btn-danger">
@@ -47,63 +47,7 @@
                                 </button>
                             </td>
                         </tr>
-                        <tr class="text-center  ">
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>2012/01/01</td>
-                            <td>Member</td>
-                            <td>Member</td>
-                            <td>
-                                <span class="badge badge-success" style="margin-right: auto">Active</span>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-success">
-                                    编辑
-                                </button>
-                                <button type="button" class="btn btn-danger">
-                                    删除
-                                </button>
-                            </td>
-                        </tr>
-                        <tr class="text-center  ">
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>2012/01/01</td>
-                            <td>Member</td>
-                            <td>Member</td>
-                            <td>
-                                <span class="badge badge-success" style="margin-right: auto">Active</span>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-success">
-                                    编辑
-                                </button>
-                                <button type="button" class="btn btn-danger">
-                                    删除
-                                </button>
-                            </td>
-                        </tr>
-                        <tr class="text-center  ">
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>Vishnu Serghei</td>
-                            <td>2012/01/01</td>
-                            <td>Member</td>
-                            <td>Member</td>
-                            <td>
-                                <span class="badge badge-success" style="margin-right: auto">Active</span>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-success">
-                                    编辑
-                                </button>
-                                <button type="button" class="btn btn-danger">
-                                    删除
-                                </button>
-                            </td>
-                        </tr>
+
                         </tbody>
                     </table>
                     <nav class="">
