--- a/apitestsys/apitest/templates/base.html
+++ b/apitestsys/apitest/templates/base.html
@@ -79,7 +79,7 @@
                         <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> 项目管理</a>
                         <ul class="nav-dropdown-items">
                             <li class="nav-item">
-                                <a class="nav-link" href="/addProject/"><i class="icon-arrow-right"></i> 新增项目</a>
+                                <a class="nav-link" href="#" onclick="guid()"><i class="icon-arrow-right"></i> 新增项目</a>
                             </li>
                         </ul>
                         <ul class="nav-dropdown-items">
