--- a/apitestsys/apitest/templates/add_project.html
+++ b/apitestsys/apitest/templates/add_project.html
@@ -76,7 +76,8 @@
                                                 <th>操作</th>
                                             </tr>
                                         </thead>
-                                        <tbody>
+                                        <tbody id="tb-env-list">
+
                                         </tbody>
                                </table>
                            </div>
@@ -270,6 +271,13 @@
                     <!-- /.modal-dialog -->
            </div>
        </div>
+        <script src="../static/assets/js/libs/jquery.min.js"></script>
+        <script>
+            $(document).ready(function ($) {
+                var id=getUrlParam("id")
+                getEnvs(id)
+            })
+        </script>
     </main>
 {% endblock %}
 
