--- a/apitestsys/apitest/templates/add_project.html
+++ b/apitestsys/apitest/templates/add_project.html
@@ -134,6 +134,7 @@
                                                 <textarea id="email-cc" name="email-cc" rows="2" class="form-control" placeholder="可填写多个抄送人"></textarea>
                                             </div>
                                    </div>
+
                                    <div class="form-group row">
                                        <label class="col-md-1 form-control-label" for="textarea-input">邮件主题</label>
                                             <div class="col-md-10">
@@ -274,8 +275,9 @@
         <script src="../static/assets/js/libs/jquery.min.js"></script>
         <script>
             $(document).ready(function ($) {
-                var id=getUrlParam("id")
-                getEnvs(id)
+                getEnvs();
+                get_project_base();
+                getEmailsetting();
             })
         </script>
     </main>
