--- a/apitestsys/apitest/templates/project_list.html
+++ b/apitestsys/apitest/templates/project_list.html
@@ -62,5 +62,12 @@
             </div>
         </div>
     </div>
+        <script src="../static/assets/js/libs/jquery.min.js"></script>
+        <script>
+            $(document).ready(function ($) {
+                get_project_list(1,10)
+            })
+        </script>
+
     </main>
 {% endblock %}
