--- a/apitestsys/apitest/templates/add_project.html
+++ b/apitestsys/apitest/templates/add_project.html
@@ -159,7 +159,7 @@
                </div>
            </div>
            <!--关联数据库弹窗-->
-           <div class="modal fade" id="primaryModalprimaryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="" aria-hidden="true">
+           <div class="modal fade" id="primaryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="" aria-hidden="true">
                     <div class="modal-lg modal-primary" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
