--- a/apitestsys/apitest/templates/project_list.html
+++ b/apitestsys/apitest/templates/project_list.html
@@ -18,34 +18,12 @@
                             <th class="text-center">项目名称</th>
                             <th class="text-center">服务器ip或地址</th>
                             <th class="text-center">数据库地址</th>
-                            <th class="text-center">接口数量</th>
-                            <th class="text-center">用例数量</th>
                             <th class="text-center">邮件开启状态</th>
                             <th class="text-center">操作</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr class="text-center  ">
-                            <td>Vishnu Serghei</td>
-                            <td>2012/01/01</td>
-                            <td>Member</td>
-                            <td>Member</td>
-                            <td>Member</td>
-                            <td>
-                                <span class="badge badge-success" style="margin-right: auto">Active</span>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-success" onclick="window.location='/addInterface/'">
-                                    编辑
-                                </button>
-                                <button type="button" class="btn btn-danger">
-                                    删除
-                                </button>
-                                <button type="button" class="btn btn-warning" onclick="window.location='/interfaceList/'">
-                                    接口列表
-                                </button>
-                            </td>
-                        </tr>
+                        <tbody id="tb-project-list">
+
                         </tbody>
                     </table>
                     <nav class="">
@@ -65,7 +43,7 @@
         <script src="../static/assets/js/libs/jquery.min.js"></script>
         <script>
             $(document).ready(function ($) {
-                get_project_list(1,10)
+                get_project_list()
             })
         </script>
 
